--- a/1.html
+++ b/1.html
@@ -12,13 +12,20 @@
 
 </head>
 <body>
-    <div class="container bg-success text-white">
+    <div class="container-fluid bg-success text-white">
         <h1>My first Bootstrap Page</h1>
         <p>This part is inside a .container class.</p>
         <p>The .container class provides a reposive fixed width container.
         </p>
-        
+
     </div>
+        <div class="container-fluid bg-success text-white">
+            <h1>My first Bootstrap Page</h1>
+            <p>This part is inside a .container class.</p>
+            <p>The .container class provides a reposive fixed width container.
+            </p>
+        
+        </div>
 </body>
 
 </html>
